# paho.mqtt.embedded-c

MQTTClient-C/src/: CMakeLists.txt
MQTTPacket/src/: CMakeLists.txt
